# rx

./: .gitignore  AGENTS.md  CONTEXT.md  Cargo.toml  LICENSE-APACHE  README.md
crates/rx/: Cargo.toml
crates/rx-cli/: Cargo.toml
crates/rx-cli/src/: main.rs
crates/rx-cli/tests/: cli.rs
crates/rx-core/: Cargo.toml
crates/rx-core/examples/: perf_smoke.rs
crates/rx-core/src/: behavior.rs  charset.rs  diagnostic.rs  emit.rs  explain.rs  legacy.rs  lib.rs  lint.rs  migration.rs  pattern.rs  pretty.rs  syntax.rs
crates/rx-core/tests/: property.rs
crates/rx-macros/: Cargo.toml
crates/rx-macros/src/: lib.rs
crates/rx-wasm/: Cargo.toml
crates/rx-wasm/src/: lib.rs
crates/rx/src/: lib.rs
crates/rx/tests/: literal.rs  macro.rs  readable.rs
crates/rx/tests/ui/: macro_invalid_capture_name.rs  macro_invalid_capture_name.stderr  macro_invalid_range.rs  macro_invalid_range.stderr  macro_malformed_syntax.rs  macro_malformed_syntax.stderr  macro_unsupported_construct.rs  macro_unsupported_construct.stderr
docs/: npm-release.md  release.md  roadmap.md
docs/adr/: 0001-readable-regex-toolchain.md  0002-validated-core-interface.md  0003-mvp-compatibility-policy.md  0004-wasm-typescript-distribution.md
docs/agents/: workflow.md
docs/prd/: end-state-readable-regex-toolchain.md
