[package]
name = "rx-lang-core"
version = "0.1.0"
description = "Core parser, diagnostics, AST, and emitters for the rx readable regex toolchain."
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"

[lib]
name = "rx_core"
path = "src/lib.rs"

[dependencies]
regex = "1"

[dev-dependencies]
proptest = "1.6.0"
regex = "1.11.1"
